BlackMATE: fix Firefox scrollbar sliders

--- a/desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
@@ -1811,7 +1811,8 @@ scrollbar button.vertical:disabled {
 	border-width: 0px;
 }
 
-scrollbar slider {
+scrollbar slider,
+scrollbar .slider {
 	background-color: transparent;
 	background-image: linear-gradient(to top,
 	                                  shade(@scroll_slider_color, 0.6),
@@ -1823,7 +1824,8 @@ scrollbar slider {
 	border-image: none;
 }
 
-scrollbar.vertical slider {
+scrollbar.vertical slider,
+scrollbar.vertical .slider {
 	border-width: 1px;
 	background-image: linear-gradient(to top,
 	                                  shade(@scroll_slider_color, 0.6),
@@ -1833,7 +1835,8 @@ scrollbar.vertical slider {
 	min-height: 42px;
 }
 
-scrollbar.horizontal slider {
+scrollbar.horizontal slider,
+scrollbar.horizontal .slider {
 	border-width: 1px;
 	background-image: linear-gradient(to left,
 	                                  shade(@scroll_slider_color, 0.6),
@@ -1843,35 +1846,29 @@ scrollbar.horizontal slider {
 	min-width: 42px;
 }
 
-scrollbar slider:hover {
+scrollbar slider:hover
+scrollbar .slider:hover {
 	border-width: 1px;
 	border-color: @scroll_slider_color;
 	border-radius: 6px;
 }
 
-scrollbar.vertical slider:hover {
+scrollbar.vertical slider:hover,
+scrollbar.vertical .slider:hover {
 	border-width: 1px;
 	border-color: @scroll_slider_color;
 	border-radius: 6px;
 }
 
-scrollbar.horizontal slider:hover {
+scrollbar.horizontal slider:hover,
+scrollbar.horizontal .slider:hover {
 	border-width: 1px;
 	border-color: @scroll_slider_color;
 	border-radius: 6px;
 }
 
-scrollbar slider:hover:active {
-	border-width: 1px;
-	border-color: @scroll_slider_color;
-	border-radius: 6px;
-	background-image: linear-gradient(to top,
-	                                  shade(@scroll_slider_color, 2.0),
-	                                  shade(@scroll_slider_color, 1.6) 55%,
-	                                  shade(@scroll_slider_color, 0.6));
-}
-
-scrollbar.vertical slider:hover:active {
+scrollbar slider:hover:active,
+scrollbar .slider:hover:active {
 	border-width: 1px;
 	border-color: @scroll_slider_color;
 	border-radius: 6px;
@@ -1881,7 +1878,19 @@ scrollbar.vertical slider:hover:active {
 	                                  shade(@scroll_slider_color, 0.6));
 }
 
-scrollbar.horizontal slider:hover:active {
+scrollbar.vertical slider:hover:active,
+scrollbar.vertical .slider:hover:active {
+	border-width: 1px;
+	border-color: @scroll_slider_color;
+	border-radius: 6px;
+	background-image: linear-gradient(to top,
+	                                  shade(@scroll_slider_color, 2.0),
+	                                  shade(@scroll_slider_color, 1.6) 55%,
+	                                  shade(@scroll_slider_color, 0.6));
+}
+
+scrollbar.horizontal slider:hover:active,
+scrollbar.horizontal .slider:hover:active {
 	border-width: 1px;
 	border-color: @scroll_slider_color;
 	border-radius: 6px;
@@ -1891,12 +1900,14 @@ scrollbar.horizontal slider:hover:active {
 	                                  shade(@scroll_slider_color, 0.6));
 }
 
-scrollbar slider:disabled {
+scrollbar slider:disabled,
+scrollbar .slider:disabled {
 	background-image: none;
 	background-color: shade(@theme_bg_color, 1.5);
 }
 
-scrollbar slider.fine-tune:hover:active {
+scrollbar slider.fine-tune:hover:active,
+scrollbar .slider.fine-tune:hover:active {
 	background-image: url("assets/slider_fine_horizontal.svg"),
 	                  linear-gradient(to top,
 	                                  shade(@scroll_slider_color, 3.3),
@@ -1906,7 +1917,8 @@ scrollbar slider.fine-tune:hover:active {
 	background-position: center;
 }
 
-scrollbar.vertical slider.fine-tune:hover:active {
+scrollbar.vertical slider.fine-tune:hover:active,
+scrollbar.vertical .slider.fine-tune:hover:active  {
 	background-image: url("assets/slider_fine_vertical.svg"),
 	                  linear-gradient(to left,
 	                                  shade(@scroll_slider_color, 3.3),
